Fix dark mode behavior

--- a/moneysplit-web/src/style.scss
+++ b/moneysplit-web/src/style.scss
@@ -2,9 +2,25 @@ $unit: 0.25rem;
 $text-unit: 1rem;
 
 :root {
-  --text-primary: var(--p-primary-700);
-  --text-secondary: var(--p-primary-600);
-  --text-muted: var(--p-primary-500);
+  --text-primary: var(--p-text-color);
+  --text-secondary: var(--p-text-hover-color);
+  --text-muted: var(--p-text-muted-color);
+
+  --positive-color: var(--p-emerald-500);
+  --negative-color: var(--p-red-500);
+
+  --accent-color: var(--p-blue-500);
+  --danger-color: var(--p-red-500);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --positive-color: var(--p-emerald-400);
+    --negative-color: var(--p-red-400);
+
+    --accent-color: var(--p-blue-400);
+    --danger-color: var(--p-red-400);
+  }
 }
 
 *, *::before, *::after {
@@ -29,12 +45,13 @@ html, body {
   body {
     display: flex;
     justify-content: center;
-    background-color: var(--p-primary-200);
+    background-color: var(--p-highlight-background);
+    // background-color: var(--p-primary-200);
   }
 
   #app {
     width: 40rem;
-    background-color: white;
+    background-color: var(--p-content-background);
   }
 
   .p-drawer-bottom .p-drawer {
